[package]
name = "local-llm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gag = "1.0.0"
llama_cpp_rs = { git = "https://github.com/BenjaminMassey/rust-llama.cpp", rev = "01255b9" }

[features]
cuda = ["llama_cpp_rs/cuda"]